[package]
name = "esp-lvgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[features]
bind = []

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-svc = { version = "0.47", features = ["nightly"] }
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.5"
ssd1306 = "0.7"
epd-waveshare = "0.5.0"
async-io = "2"
async-executor = "1"
futures-lite = "1"
embedded-svc = "0.26.1"
esp-idf-hal = "0.42.2"

[build-dependencies]
embuild = { version = "0.31.3", features = ["elf"] }

